# customer-churn

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
artifacts/: feature_columns.json  preprocessing.pkl
notebooks/: EDA.ipynb  test_buildfeatures.ipynb  test_preprocess.ipynb
scripts/: run_pipeline.py
src/data/: load_data.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate.py  train.py  tune.py
src/serving/: inference.py
src/serving/model/: MLmodel  conda.yaml  model.ubj  python_env.yaml
