[project]
name = "customerchurn-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "gradio>=6.13.0",
    "great-expectations>=1.15.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "mlflow>=3.10.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "posthog>=7.12.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tree>=0.2.4",
    "unicorn>=2.1.4",
    "xgboost>=3.2.0",
]
